@@ -1,0 +1,3 @@
+<?php
+  if (!extension_loaded('soap')) die('skip soap extension not available');
+?>
